Create simple Express.js server for Coolify deployment
- Added simple Express.js server with static file serving
- Created simple Dockerfile that should work with any platform
- Added health check endpoint for monitoring
- Created comprehensive troubleshooting guide
- Simplified package.json with only required dependencies

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "single-page-portfolio",
   "version": "1.0.0",
   "description": "A modern single page static website",
-  "main": "index.html",
+  "main": "server.js",
   "scripts": {
-    "start": "echo 'Static website - no start script needed'",
-    "build": "echo 'Static website - no build required'"
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   },
   "keywords": ["portfolio", "website", "static"],
   "author": "Your Name",
