Update nginx configuration and add 404 error handling
- Updated nginx.conf with proper server configuration
- Added 404.html for custom error page handling
- Updated Dockerfile to include 404.html file
- Added test script for nginx configuration validation

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,9 +14,23 @@ http {
         server_name  localhost;
 
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-            try_files $uri $uri/ /index.html;
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri.html $uri/index.html $uri/index.htm $uri/ =404;
+        }
+
+        # Handle 404 errors
+        error_page 404 /404.html;
+        location = /404.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+
+        # Handle server errors (50x)
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+            internal;
         }
 
         # Handle static assets with proper caching
@@ -31,10 +45,5 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
     }
 }
