--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "single-page-portfolio",
+  "name": "portfolio",
   "version": "1.0.0",
-  "description": "A modern single page static website",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2"
-  },
-  "keywords": ["portfolio", "website", "static"],
-  "author": "Your Name",
-  "license": "MIT"
+  }
 }
